--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="social-icon" href="https://github.com/Mnnish"><i class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
                     <a class="social-icon" href="https://wa.me/917709442885"><i class="fab fa-whatsapp"></i></a>
-                    <a class="social-icon" href="tel:+917709442885"><i class="fa fa-phone"></i></a>
+                    <a class="social-icon" style="margin-top: 5px;" href="tel:+917709442885"><i class="fa fa-phone"></i></a>
                     <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
 
                 </div>
