--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     able to work well both in a team environment as well as using own initiative. I am able to work well
                     under pressure and adhere to strict deadlines.</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://drive.google.com/file/d/1ikgUfQ2W3Xb5pqvHzo4Qn1Y1BISJX8bx/view"><i class="fa fa-file"></i></a>
+                    <a class="social-icon" href="https://drive.google.com/file/d/1u5vEWVuf5FN33eHuo7kN9CRKQlRor9KZ/view?usp=sharing"><i class="fa fa-file"></i></a>
                     <a class="social-icon" href="https://www.linkedin.com/in/mnnish-kumbhare/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/Mnnish"><i class="fab fa-github"></i></a>
